tests/error/switch_in.gw
// [skip]
// [contains] swith inside an other switch
switch(maybe) {
  case 1: <<<1>>>;break;
  case 0:
   	switch(maybe) {
      case 1: break;
      case 0:<<<0>>>; break;
 	  }
    break;
}
